--- a/00/custom-scripts-and-configs/test/slurm.conf
+++ b/00/custom-scripts-and-configs/test/slurm.conf
@@ -143,5 +143,8 @@ SlurmdLogFile=/var/log/slurmd.log
 #
 #
 # COMPUTE NODES
-NodeName=p4de[1-2] CPUs=2 RealMemory=3830 State=UNKNOWN
-PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP
+#NodeName=p4de[1-2] CPUs=2 RealMemory=3830 State=UNKNOWN
+#PartitionName=debug Nodes=ALL Default=YES MaxTime=INFINITE State=UP
+NodeName=p4de1 NodeAddr=10.52.17.11 CPUs=1 State=UNKNOWN
+NodeName=p4de2 NodeAddr=10.52.17.12 CPUs=1 State=UNKNOWN
+PartitionName=debug Nodes=p4de[1-2] Default=YES MaxTime=INFINITE State=UP
